Jazz-1.3/edu/umd/cs/jazz/io/ZInternalParser.java
/* Generated By:JavaCC: Do not edit this line. ZInternalParser.java */
package edu.umd.cs.jazz.io;

import java.lang.*;
import java.security.SecureClassLoader;
import java.util.*;
import java.io.*;
import java.lang.reflect.Method;
import java.lang.reflect.Modifier;
import java.lang.reflect.InvocationTargetException;

public class ZInternalParser implements ZInternalParserConstants {
    static protected final Class[] NULL_ARGS = {};

    protected Hashtable objectTable;
    protected ZExtendedInputStream data;
    public FileInputStream realStream;
    public Hashtable stringTranslations = null;

    public void createObjectTable() {
        objectTable = new Hashtable();
    }
    public Hashtable getObjectTable() {
        return objectTable;
    }

    public void setDataStream(ZExtendedInputStream data) {
        this.data = data;
    }
    public ZExtendedInputStream getDataStream() {
        return data;
    }


    public void putObject(String key, Object val) {
        //System.out.println(key + " : " + val);

        objectTable.put(key, val);
    }

    public Object getObject(String key) {
        return objectTable.get(key);
    }


    public static void writeTesterFile(String filename) {
        try {
            FileOutputStream fos =  new FileOutputStream(filename);
            ZObjectOutputStream out = new ZObjectOutputStream(fos);
            edu.umd.cs.jazz.ZNode node = new edu.umd.cs.jazz.ZNode();
            out.writeObject(node);
            out.flush();
            out.close();
        }
        catch (IOException e) {
            System.out.println("Exception caught in writeTesterFile : " + e);

        }
    }

    public static FileInputStream getInputStream(String args[]) {
        FileInputStream result = null;
        if (args.length == 1) {
            System.out.println("Jazz File Parser:  Reading from file " + args[0] + " . . .");

            try {
                result = new FileInputStream(args[0]);
            }
            catch (java.io.FileNotFoundException e) {
                System.out.println("Java Parser Version 1.1:  File " + args[0] + " not found.");
            }
        } else {
            System.out.println("Jazz File Parser:  Usage is :");
            System.out.println("         java ZInternalParser inputfile");

        }
        return result;
    }

    public static void main(String args[]) {
        //writeTesterFile("ZNode.jazz");

        ZInternalParser parser;
        FileInputStream inStream = getInputStream(args);


        if (inStream != null) {
            parser = new ZInternalParser(inStream);
            parser.createObjectTable();

            try {
                Object result = parser.Scene(parser);
                System.out.println("Jazz File Parser:  Jazz file parsed successfully.");
                System.out.println(result);

            } catch (ParseException e) {
                System.out.println(e.getMessage());
                System.out.println("Jazz File Parser:  Encountered errors during parse.");
            }
        }
    }

/*
 * Program structuring syntax follows.
 */
  static final public Object Scene(ZInternalParser p) throws ParseException {
    Object result = null;
    Prolog(p);

    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      Declaration(p);
    }
    result = ReturnClause(p);
    jj_consume_token(0);
        {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public Object ReturnClause(ZInternalParser p) throws ParseException {
    Object result = null;
    jj_consume_token(LBRACKET);
    jj_consume_token(RETURN);
    jj_consume_token(IDENTIFIER);
        result = p.getObject(token.toString().substring(1));
        //System.out.println("Parser will return " + result);

    jj_consume_token(RBRACKET);
        {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public void Declaration(ZInternalParser p) throws ParseException {
    String objectKey;
    jj_consume_token(LBRACKET);
    jj_consume_token(OBJECT);
    jj_consume_token(IDENTIFIER);
        objectKey = token.toString().substring(1);
        //System.out.println("parsing state for : " + objectKey);

    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      ObjectState(p, objectKey);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(RBRACKET);
  }

  static final public void ObjectState(ZInternalParser p, String forObject) throws ParseException {
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case BINARY:
      case BYTE:
      case CHAR:
      case DOUBLE:
      case FALSE:
      case FLOAT:
      case INT:
      case LONG:
      case BUILT_IN_OBJECT_TYPE:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      ObjectStateItem(p, forObject);
    }
    jj_consume_token(RBRACE);
  }

  static final public void ObjectStateItem(ZInternalParser p, String forObject) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BUILT_IN_OBJECT_TYPE:
      ObjectStateBuiltInItem(p, forObject);
      break;
    case BOOLEAN:
    case BYTE:
    case CHAR:
    case DOUBLE:
    case FALSE:
    case FLOAT:
    case INT:
    case LONG:
    case IDENTIFIER:
      ObjectStateSimpleItem(p, forObject);
      break;
    case BINARY:
      ObjectStateBinaryItem(p, forObject);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ObjectStateBuiltInItem(ZInternalParser p, String forObject) throws ParseException {
    String itemType = "";
    String itemName = "";
    String itemVal = "";
    Object iv;
    jj_consume_token(BUILT_IN_OBJECT_TYPE);
            itemType = token.toString();
    itemName = FieldName();
    iv = ValueObject(p);
        Object valueObject;
        Object o = p.getObject(forObject);
        if ((o != null) && (iv != null)) {
            if (itemType.equals("java.awt.Color")) {
                Object[] colorAttributes = ((Vector)iv).toArray();

                valueObject = new java.awt.Color(((Number)colorAttributes[0]).floatValue(), ((Number)colorAttributes[1]).floatValue(),
                                                 ((Number)colorAttributes[2]).floatValue(), ((Number)colorAttributes[3]).floatValue());

            } else if (itemType.equals("java.awt.Font")) {
                Object[] fontAttributes = ((Vector)iv).toArray();

                valueObject = new java.awt.Font((String)fontAttributes[0], ((Number)fontAttributes[1]).intValue(),
                                                ((Number)fontAttributes[2]).intValue());

            } else if (itemType.equals("java.awt.geom.Rectangle2D")) {
                Object[] rectAttributes = ((Vector)iv).toArray();

                valueObject = new java.awt.geom.Rectangle2D.Double (((Number)rectAttributes[0]).doubleValue(),
                                                                    ((Number)rectAttributes[1]).doubleValue(),
                                                                    ((Number)rectAttributes[2]).doubleValue(),
                                                                    ((Number)rectAttributes[3]).doubleValue());

            } else if (itemType.equals("java.awt.geom.AffineTransform")) {
                Object[] atAttributes = ((Vector)iv).toArray();

                valueObject = new java.awt.geom.AffineTransform (((Number)atAttributes[0]).doubleValue(),
                                                                 ((Number)atAttributes[1]).doubleValue(),
                                                                 ((Number)atAttributes[2]).doubleValue(),
                                                                 ((Number)atAttributes[3]).doubleValue(),
                                                                 ((Number)atAttributes[4]).doubleValue(),
                                                                 ((Number)atAttributes[5]).doubleValue());

            } else {
                valueObject = null;
            }

            if (o instanceof ZSerializable) {
                ZSerializable tmp = (ZSerializable) o;
                tmp.setState(itemType, itemName, valueObject);
            }
        }
  }

  static final public void ObjectStateSimpleItem(ZInternalParser p, String forObject) throws ParseException {
    String itemType = "";
    String itemName = "";
    String itemVal = "";
    Object iv;
    itemType = FieldType();
    itemName = FieldName();
    iv = ValueObject(p);
        if (iv != null) {
            itemVal = iv.toString();
            Object o = p.getObject(forObject);

            if (o != null) {
                if (o instanceof ZSerializable) {
                    ZSerializable tmp = (ZSerializable) o;
                    tmp.setState(itemType, itemName, iv);
                }
            }
        }
  }

  static final public String FieldType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      ObjectType();
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    case BYTE:
      jj_consume_token(BYTE);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case INT:
      jj_consume_token(INT);
      break;
    case LONG:
      jj_consume_token(LONG);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return token.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String FieldName() throws ParseException {
    jj_consume_token(IDENTIFIER);
        {if (true) return token.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public Object ValueObject(ZInternalParser p) throws ParseException {
    Object array;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      jj_consume_token(INTEGER_LITERAL);
            {if (true) return new Integer(token.toString());}
      break;
    case FLOATING_POINT_LITERAL:
      jj_consume_token(FLOATING_POINT_LITERAL);
            {if (true) return new Float(token.toString());}
      break;
    case DOUBLE_FLOATING_POINT_LITERAL:
      jj_consume_token(DOUBLE_FLOATING_POINT_LITERAL);
            {if (true) return new Double(token.toString());}
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
            String str = ZParser.translateJazzToJava(token.toString());

            {if (true) return str.substring(1, str.length()-1);}
      break;
    case LBRACKET:
      array = Array(p);
            {if (true) return array;}
      break;
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
            {if (true) return p.getObject(token.toString().substring(1));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
        {if (true) return new Boolean(true);}
      break;
    case FALSE:
      jj_consume_token(FALSE);
        {if (true) return new Boolean(false);}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Object Array(ZInternalParser p) throws ParseException {
    Vector result = new Vector();
    Object tmp;
    jj_consume_token(LBRACKET);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case DOUBLE_FLOATING_POINT_LITERAL:
      case FLOATING_POINT_LITERAL:
      case STRING_LITERAL:
      case LBRACKET:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
            result.add(p.getObject(token.toString().substring(1)));
        break;
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
            result.add(new Integer(token.toString()));
        break;
      case FLOATING_POINT_LITERAL:
        jj_consume_token(FLOATING_POINT_LITERAL);
            result.add(new Float(token.toString()));
        break;
      case DOUBLE_FLOATING_POINT_LITERAL:
        jj_consume_token(DOUBLE_FLOATING_POINT_LITERAL);
            result.add(new Double(token.toString()));
        break;
      case STRING_LITERAL:
        jj_consume_token(STRING_LITERAL);
            String str = token.toString();
            result.add(str.substring(1, str.length()-1));
            //result.add(new String(token.toString()));

        break;
      case LBRACKET:
        tmp = Array(p);
            result.add(tmp);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RBRACKET);
      //System.out.println("array = " + result);

      {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public void ObjectStateBinaryItem(ZInternalParser p, String forObject) throws ParseException {
   String itemType = "";
   String itemName = "";
   byte[] itemVal;
   int    byteCount;
   int    offset;
    jj_consume_token(BINARY);
            itemType = token.toString();
    jj_consume_token(IDENTIFIER);
            itemName = token.toString();
    jj_consume_token(INTEGER_LITERAL);
            byteCount = Integer.parseInt(token.toString());
    jj_consume_token(INTEGER_LITERAL);
            offset = Integer.parseInt(token.toString());
        Object o = p.getObject(forObject);
        ZExtendedInputStream data = p.getDataStream();
        itemVal = new byte[byteCount];

        synchronized(data) {
            try {
                data.setFilePosition(offset-1);
                data.read(itemVal, 0, byteCount);
            }
            catch (IOException e) {
                System.out.println("ZInternalParser.ObjectStateBinaryItem: caught exception while accesing data stream");
            }
        }
        //System.out.println("      - Set [" + itemName + "] whose type is [" + itemType + "] whose value is [" + itemVal + "]");

        if (o != null) {
            if (o instanceof ZSerializable) {
                ZSerializable tmp = (ZSerializable) o;
                tmp.setState(itemType, itemName, itemVal);
            }
        }
  }

  static final public void Prolog(ZInternalParser p) throws ParseException {
    jj_consume_token(LBRACKET);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      PrologItem(p);
    }
    jj_consume_token(RBRACKET);
  }

  static final public void PrologItem(ZInternalParser p) throws ParseException {
    String s;
    String key;
    jj_consume_token(IDENTIFIER);
            key = token.toString();
    s = ObjectType();
        Class c = null;
        Object o = null;

        try {
            c = Class.forName(s);
            o = c.newInstance();

                                // Check to see if this object has a readResolve method.
                                // If so, call it to get a replacement object, and use that intead of this one.
            try {
                Method readResolveMethod = o.getClass().getDeclaredMethod("readResolve", NULL_ARGS);
                int mods = readResolveMethod.getModifiers();
                if ((mods & Modifier.STATIC) == 0) {
                                // Determine replacement object
                    Object replacementObj = null;
                    try {
                        o = readResolveMethod.invoke(o, NULL_ARGS);
                        if (o != null) {
                            if (!(o instanceof ZSerializable)) {
                                {if (true) throw new IOException("ZParser: Error: readResolve returned object that isn't ZSerializable: " + o);}
                            }
                        }
                    } catch (IllegalAccessException e) {
                        {if (true) throw new IOException("ZParser: Error reading: " + o +
                                              ", Can't access readResolve method: " + e);}
                    } catch (InvocationTargetException e) {
                        {if (true) throw new IOException("ZParser: Error reading: " + o + ", " + e);}
                    }
                }
            } catch (NoSuchMethodException e) {
                                // If no replacement method - then just continue along without replacing object
            }

            if (o != null) {
                p.putObject(key, o);
            }
        }
        catch (Exception e) {
            System.out.print("Exception caught while trying to : ");
            if (e instanceof InstantiationException) {
                System.out.println("instantiate class" + c);
                p.putObject(key, "Error instantiating " + c);
            } else if (e instanceof ClassNotFoundException) {
                System.out.println("load class " + s);
                p.putObject(key, "");
            } else {
                System.out.println(e);
                p.putObject(key, "");
            }

        }
  }

  static final public String ObjectType() throws ParseException {
    String result = "";
    jj_consume_token(IDENTIFIER);
            result = token.toString();
    label_5:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(38);
      jj_consume_token(IDENTIFIER);
          result = result + "." + token;
    }
            {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }
